# NitroWiFi

./: .gitignore  meson.build  meson.options
include/: nitroWiFi.h
include/nitroWiFi/: cps.h  socl.h
include/nitroWiFi/decomp/: decomp_defs_nitrowifi.h
libraries/cps/: meson.build
libraries/cps/src/: meson.build  network.c
libraries/soc/: meson.build
libraries/soc/src/: soc.c  socl_bind.c  socl_cleanup.c  socl_close.c  socl_command.c  socl_const.c  socl_create.c  socl_list.c  socl_poll.c  socl_read.c  socl_resolve.c  socl_shutdown.c  socl_ssl.c  socl_startup.c  socl_write.c
libraries/ssl/: meson.build
libraries/ssl/src/: arc4.c  biginteger.c  md5.c  meson.build  sha1.c  ssl.c
libraries/stubs/md5/: meson.build
libraries/stubs/soc/: meson.build
libraries/stubs/ssl/: meson.build
libraries/wcm/: meson.build
libraries/wcm/src/: cpsif.c  system.c
